--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: "17.0.1"
 services: 
  keycloak:
     container_name: Keycloak_Invinsense
-    build: ./keycloak_theme
+    build: .
     ports:
       - 8080:8080
